--- a/index.html
+++ b/index.html
@@ -4,32 +4,78 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Budget Web App | javascript</title>
     <link href="./style.css" rel="stylesheet" type="text/css" />
-    <title>Budget Web App</title>
   </head>
   <body>
     <div class="budget-container">
-      <div class="app-title">codeExplained</div>
+      <div class="app-title">
+        <a href="">Code<b>Explained</b></a>
+      </div>
       <div class="budget-header">
         <div class="balance">
           <div class="title">Balance</div>
-          <div class="value"></div>
+          <div class="value"><small>$</small>0</div>
         </div>
         <div class="account">
           <div class="income">
             <div class="title">Income</div>
-            <div class="income-total"></div>
+            <div class="income-total"><small>$</small>0</div>
           </div>
           <div class="chart"></div>
           <div class="outcome">
             <div class="title">Outcome</div>
-            <div class="outcome-total"></div>
+            <div class="outcome-total"><small>$</small>0</div>
           </div>
         </div>
       </div>
       <div class="budget-dashboard">
         <div class="dash-title">Dashboard</div>
+        <div class="toggle">
+          <div class="expense-list">Expenses</div>
+          <div class="income-list">Income</div>
+          <div class="all-list active">All</div>
+        </div>
+        <div class="hide" id="expense">
+          <ul class="list"></ul>
+          <div class="inputs">
+            <input
+              type="text"
+              id="expense-title-input"
+              name="title"
+              placeholder="title"
+            />
+            <input
+              type="number"
+              id="expense-amount-input"
+              name="amount"
+              placeholder="$0"
+            />
+            <div class="add-expense"><img src="icon/plus.png" alt="+" /></div>
+          </div>
+        </div>
+        <div class="hide" id="income">
+          <ul class="list"></ul>
+          <div class="inputs">
+            <input
+              type="text"
+              id="income-title-input"
+              name="title"
+              placeholder="title"
+            />
+            <input
+              type="number"
+              id="income-amount-input"
+              name="amount"
+              placeholder="$0"
+            />
+            <div class="add-income"><img src="icon/plus.png" alt="+" /></div>
+          </div>
+        </div>
+        <div id="all"></div>
       </div>
     </div>
+    <script src="./chart.js"></script>
+    <script src="./budget.js"></script>
   </body>
 </html>
