change some class and html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="budget-container">
       <div class="app-title">
-        <a href="">Code<b>Explained</b></a>
+        <a href="">Budget<b>App</b></a>
       </div>
       <div class="budget-header">
         <div class="balance">
@@ -34,7 +34,7 @@
         <div class="toggle">
           <div class="first-tab">Expenses</div>
           <div class="second-tab">Income</div>
-          <div class="third-tab active">All</div>
+          <div class="third-tab focus">All</div>
         </div>
         <div class="hide" id="expense">
           <ul class="list"></ul>
